--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,5 @@ dependencies = [
     "pydantic-settings>=2.0",
     "python-multipart>=0.0.9",
     "pyyaml>=6.0",
+    "gunicorn>=25.1.0",
 ]
-
-[project.scripts]
-omnidesk-bot = "omnidesk_bot:main"
-
-[build-system]
-requires = ["uv_build>=0.10.2,<0.11.0"]
-build-backend = "uv_build"
